# PC-Controller-py

./: .gitignore  LICENSE  README.md  \  lib.py  main.py  pyproject.toml  setup.py  tox.ini
examples/: broadcast_method_calling.py  method_calling.py  raw_method_calling.py  start.py
lib/: __init__.py
pcclient/: __init__.py  error.py  method.py  result.py
pcclient.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
