[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pcclient"
authors = [{name = "Nikita Pyrlicanu", email = "ecfed205@gmail.com"}]
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
required-python = ">=3.7"
description-file = "README.md"

[project.urls]
Home = "https://github.com/nikita0607/PC-Controller-py"
